--- a/Anomaly_detection_mecanical.ipynb
+++ b/Anomaly_detection_mecanical.ipynb
@@ -896,7 +896,7 @@
    "metadata": {},
    "source": [
     "We use the elu (Exponential linear unit) activation function, which returns x if x > 0 and\n",
-    "exp((x)-1) if x < 0). Here all values are positives so the activation functions is set to return x. No difference was observed based on variation of the initialization of weights. This may mean that model training is complete after 100 iterations, and thus results are stable."
+    "exp((x)-1) if x < 0). Such choice allows faster convergence of model weigths compared to relu because of non null output for x < 0. No difference was observed based on variation of the initialization of weights. This may mean that model training is complete after 100 iterations, and thus results are stable."
    ]
   },
   {
